always enable vertical scrollbar to prevent layout jumping

--- a/themes/Malara/static/css/malara.css
+++ b/themes/Malara/static/css/malara.css
@@ -3,6 +3,7 @@
 body {
     margin: 0;
     font-size: 1.2em;
+    overflow-y: scroll;
 }
 
 a {
